GNOME Bugzilla – Bug 733027
GtkStack doesn't render a background
Last modified: 2015-01-27 09:33:38 UTC
GtkStack currently doesn't render a background, so theming it isn't possible. Also, this causes issues with native X11 windows under Ubuntu where the GtkStack will appear black or transparent, i.e. the background colour of the top-level X11 window.
Created attachment 280443 [details] GtkStack issue under Ubuntu This happened because GtkStack doesn't render a background
Created attachment 280444 [details] [review] Patch to render (themable) GtkStack background
This breaks the stack transitions. Compare before/after on page 2 of widget-factory.
benjamin fixed it