GtkStack: Render background and chain up gtk_widget_draw ().

https://bugzilla.gnome.org/show_bug.cgi?id=733027